--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
   <article class="gallery-container">
     <figure class="text">
-      <h2>Voici les catégories de Produits que nous porposons et ainsi les régions on vous pouvez trouver notre Ferme</h2>
+      <h2>Voici les catégories de Produits que nous proposons et ainsi les 
+        régions on vous pouvez trouver notre Ferme</h2>
     </figure>
     <figure class="gallery">
       <img src="/public/assets/img/homme-ferme.jpg" alt="">
