--- a/index.html
+++ b/index.html
@@ -28,21 +28,23 @@
   </video>
 
 
-  <article class="gallery-container">
-    <figure class="text">
-      <h2>Voici les catégories de Produits que nous proposons et ainsi les 
-        régions on vous pouvez trouver notre Ferme</h2>
+  <section class="family">
+    <figure class="images">
+      <img src="./public/assets/img/pere&fils.jpg" alt="pere et fils à la ferme">
     </figure>
-    <figure class="gallery">
-      <img src="/public/assets/img/homme-ferme.jpg" alt="">
-      <img src="/public/assets/img/man-cereale.jpg" alt="">
-      <img src="/public/assets/img/produit-laitier.jpg" alt="">
-      <img src="/public/assets/img/legumes.jpg" alt="">
-      <img src="/public/assets/img/apiary-1866740_1280.jpg" alt="">
-      <img src="/public/assets/img/Photo-poulet.png" alt="">
-      <img src="/public/assets/img/madelon-savoie.jpg" alt="">
+    <figure class="paragraphes">
+      <h2>Notre histoire </h2>
+      <p>
+        Dans une vallée verdoyante, une petite ferme témoignait du travail acharné de plusieurs 
+        générations. Son histoire la plus précieuse était celle de la première récolte,
+         où un jeune couple avait transformé une terre rocailleuse en champs fertiles. 
+         Cette récolte avait symbolisé l'espoir et la persévérance,
+          et son souvenir était transmis de génération en génération,
+           inspirant chaque famille à cultiver avec passion et détermination.
+            Ainsi, chaque repas pris sur cette terre était un hommage à leurs ancêtres
+             et à la magie du travail acharné.</p>
     </figure>
-  </article>
+  </section>
   
 
 
